# ompi

./: .clang-format  .cproject  .cvsignore  .gitignore  .gitignore_global  .gitmodules  .hgignore_global  .mailmap  .nspect-allowlist.toml  .readthedocs-pre-create-environment.sh  .readthedocs.yaml  .travis.yml  AGENTS.md  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  GAMES.cpp  HACKING  HACKING.md  HETERO_MERGE_README  INSTALL  ISSUES  ISSUE_TEMPLATE.md  LICENSE  MPI_DEVEL_MERGE_README  Makefile.am  Makefile.man-page-rules  Makefile.mca-dso-check  Makefile.ompi-rules  NEWS  README  README-SHMEM-WITH-VALGRIND.txt  README-SHMEM.txt  README-bogus.txt  README.FT.ULFM.md  README.JAVA.md  README.JAVA.txt  README.WINDOWS  (+20 more)
config/: .cvsignore  Makefile.am  Makefile.options  aclocal_subcfg.m4  ax_create_stdint_h.m4  c_compiler_vendor.m4  c_get_alignment.m4  c_weak_aliases.m4  c_weak_symbols.m4  cmpi_functions.m4  cmpi_get_version.m4  cmpi_get_version.sh  cxx_compiler_vendor.m4  cxx_find_exception_flags.m4  cxx_find_template_parameters.m4  cxx_find_template_repository.m4  cxx_have_exceptions.m4  distscript.csh  distscript.sh  extract-3rd-party-configure.pl  f77_check.m4  f77_check_logical_array.m4  f77_check_real16_c_equiv.m4  f77_check_type.m4  f77_find_ext_symbol_convention.m4  f77_get_alignment.m4  f77_get_fortran_handle_max.m4  f77_get_sizeof.m4  f77_get_value_true.m4  f77_purge_unsupported_kind.m4  f90_check.m4  f90_check_type.m4  f90_find_module_include_flag.m4  f90_get_alignment.m4  f90_get_int_kind.m4  f90_get_precision.m4  f90_get_range.m4  f90_get_sizeof.m4  find_common_syms  fortran_check_bind_c.m4  (+305 more)
config/from-savannah/: README.md
contrib/: Makefile.am  authors-to-cvsimport.pl  check-btl-sm-diffs.pl  check-help-strings.pl  check-ob1-pml-diffs.pl  check-ob1-revision.pl  check-owner.pl  check_unnecessary_headers.sh  clang-format-ompi.sh  cleanperms  code_counter.pl  coll_tuned_rulefile_converter.py  configure.ac  copyright.pl  find_occurence.pl  find_offenders.pl  fix_headers.pl  fix_indent.pl  gen_stats.pl  generate_file_list.pl  git-clean.sh  header_replacement.sh  headers.txt  libadd_mca_comp_update.py  make_manpage.pl  nroff-to-md-conversion.py  offenders.list  ompi-time.sh  ompi_branch_check_revisions-v1.5.txt  ompi_branch_check_revisions.pl  ompi_branch_check_revisions.sh  ompi_cplusplus.sed  ompi_cplusplus.sh  ompi_cplusplus.txt  openmpi-valgrind.supp  pdb  purge-tab-indents.pl  purge-trailing-blank-lines.pl  results.txt  search_compare.pl  (+7 more)
contrib/admin/: README.md  annual-ompi-github-committer-review.py
contrib/amca-param-sets/: ft-enable-cr  ft-enable-cr-recovery  ft-mpi
contrib/annual-maintenance/: convert-to-git.txt
contrib/build-mca-comps-outside-of-tree/: Makefile.am  README.md  README.txt  autogen.sh  btl_tcp2.addr.h  btl_tcp2.c  btl_tcp2.h  btl_tcp2_addr.h  btl_tcp2_component.c  btl_tcp2_endpoint.c  btl_tcp2_endpoint.h  btl_tcp2_frag.c  btl_tcp2_frag.h  btl_tcp2_ft.c  btl_tcp2_ft.h  btl_tcp2_hdr.h  btl_tcp2_proc.c  btl_tcp2_proc.h  configure.ac  help-mpi-btl-tcp2.txt
contrib/build-server/: README.txt  crontab.txt  hwloc-nightly-coverity.pl  hwloc-nightly-tarball.sh  hwloc-release.sh  install-autotools-set.sh  openmpi-nightly-coverity.pl  openmpi-nightly-tarball.sh  openmpi-release.sh  openmpi-update-www.open-mpi.org.sh  pmix-nightly-coverity.pl  pmix-nightly-tarball.sh  remove-old.pl
contrib/completion/: mpirun.sh  mpirun.zsh
contrib/coverity/: coverity-model.c  nightly-coverity.pl
contrib/datatype/: README.md  build_to_self_release.py  compare_pack_runs.py  datatype_bench_common.py  plot_to_self_pack_comparison.py  plot_to_self_suite_comparison.py  run_pack_description_sweep.py  run_to_self_pack_comparison.py  run_to_self_suite_comparison.py  tune_datatype.py
contrib/doc-ft-components/: DEVEL.FT-REQUIREMENTS.md
contrib/git/: build-gitignore.pl  update-git-svn.sh
contrib/greenplum/: nconfig
contrib/hg/: .hgignore  build-hgignore.pl  set-hg-share-perms.csh
contrib/infrastructure/: README-setup-github-diff-emails.txt  README.txt  crontab-mpiteam-at-jaguar.crest.iu.edu.txt  crontab-mpiteam-at-lion.crest.iu.edu  gitdub-config.yml  github-send-commit-mails.pl  openmpi-update-www.open-mpi.org.sh
contrib/nightly/: build_sample_config.txt  build_tarball.pl  build_tests.pl  check_devel_headers.pl  create_tarball.sh  crontab-mpiteam-at-jaguar.crest.iu.edu.txt  crontab-mpiteam-at-lion.crest.iu.edu  crontab.txt  illegal_symbols_report.pl  ompi_cronjob.sh  openmpi-nightly-githgignore.sh  openmpi-nightly-tarball.sh  openmpi-nightly-tmpbranch-tarball.sh  openmpi-release.sh  openmpi-upate-hg-svn.sh  test_tarball.pl  test_tarball.sh  unimplemented_report.sh  update-component-owners-github-wiki.pl
contrib/platform/: cray_xt3  cray_xt3_romio  cray_xt_cnl_romio  optimized  (+4 more)
docs/: Makefile  Makefile.am  conf.py  contributing.rst  debugging-apps.rst  generate-code-of-conduct-rst.py  generate-llm-docs.py  generate-mpi-man3-bindings.py  getting-help.rst  history.rst  index.rst  llms.txt  mca.rst  mpi-standard-4.1-apis.json  mpi-standard-5.0-abi.json  mpi-standard-5.0-apis.json  mpi-standard-abi.json  mpi-standard-apis.json  no-prrte-content.rst.txt  ompi_docs_common.py  quickstart.rst  requirements.txt  to-do.rst  validate-llm-docs.py  validate.rst  version-numbering.rst
etc/: Makefile.am  lanl_resources.xml  openmpi-default-hostfile  openmpi-mca-params.conf  openmpi-totalview.tcl
include/: Makefile.am  lam_config_bottom.h  mpi.h  mpi.h.in  mpif.h.in  ompi_config_bottom.h  ompi_stdint.h  orte_config.h
ompi/: CMakeLists.txt  Makefile.am  README.dox  libmpi.map  ompi.vcproj  win_makefile
opal/: CMakeLists.txt  Makefile.am  common_sym_allowlist.txt  common_sym_whitelist.txt  opal.vcproj  win_makefile
orca/: CMakeLists.txt  Makefile.am
orte/: CMakeLists.txt  Doxyfile  Makefile.am  common_sym_whitelist.txt  orte.vcproj
oshmem/: CMakeLists.txt  Makefile.am  liboshmem.map
src/: .cvsignore  Makefile.am  README.dox  atomic.h  lam.h  types.h  win_makefile
test/: CMakeLists.txt  Makefile.am  Makefile.mca-dso-check  Unit-Test-Status.xls
(+29069 files in other folders)
